# MCPy

./: CONTRIBUTING.md  README.md  config.example.json  pyproject.toml
docs/: Design.md
src/mcp_proxy/: cli.py  config.py  runtime.py  server.py
src/mcp_proxy/plugins/: __init__.py  registry.py
src/mcp_proxy/proxy/: bridge.py  manager.py  stdio.py
src/mcp_proxy/telemetry/: pipeline.py
src/mcp_proxy/web/static/: admin.css  admin.js
src/mcp_proxy/web/templates/: admin.html
tests/: conftest.py  test_admin_auth.py  test_admin_ui_api.py  test_atomic_apply_rollback.py  test_bridge_shutdown_sync.py  test_cli.py  test_config.py  test_hot_reload.py  test_overload_handling.py  test_plugins.py  test_redaction.py  test_routing_precedence.py  test_server_shutdown.py  test_server_streaming.py  test_stdio_restart.py  test_telemetry_queue_flush.py
