[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpy-proxy"
version = "0.1.0"
description = "Production-ready multi-upstream MCP proxy with admin MCP interface and telemetry pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "project maintainers" }
]
keywords = ["mcp", "json-rpc", "proxy", "fastapi", "telemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Topic :: Internet :: Proxy Servers"
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
]

[project.scripts]
# CLI usage: mcp-proxy serve --config <path> --listen <host:port>
mcp-proxy = "mcp_proxy.cli:main"

[project.entry-points."mcp_proxy.upstreams"]
stdio = "mcp_proxy.proxy.stdio:StdioUpstreamTransport"
http = "mcp_proxy.proxy.http:HttpUpstreamTransport"

[project.entry-points."mcp_proxy.telemetry_sinks"]
http = "mcp_proxy.telemetry.http_sink:HttpTelemetrySink"
noop = "mcp_proxy.telemetry.noop_sink:NoopTelemetrySink"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
